# Optimizers

./: .gitignore  README.md
Tools/GradDesc/: CMakeLists.txt  ProblemBase.xml
Tools/GradDesc/GeneratorFiles/: PolyProblem.xml  ProblemBase.xml  Refiner.xml  Result.xml
Tools/GradDesc/GradDesc/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
Tools/GradDesc/GradDescLib/: CMakeLists.txt  ProblemBase.h  Refiner.cpp  Refiner.h  Result.h
Tools/GradDesc/GradDescLib/Problems/: PolyProblem.h  ProblemBase.h
Tools/GradDesc/GradDescTests/: CMakeLists.txt
Tools/GradDesc/GradDescTests/Tests/: Example_Tests.cpp  Refiner_Tests.cpp
